--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/messa/itsrazy.cz/issues"
   },
-  "homepage": "https://github.com/messa/itsrazy.cz#readme"
+  "homepage": "https://github.com/messa/itsrazy.cz#readme",
+  "dependencies": {
+    "next": "^11.1.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  }
 }
