--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/messa/itsrazy.cz#readme",
   "dependencies": {
+    "js-yaml": "^4.1.0",
     "next": "^11.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
