--- a/data/frontendisti.yaml
+++ b/data/frontendisti.yaml
@@ -1,1 +1,7 @@
-foo: bar
+series:
+  id: frontendisti
+  events:
+  - id: frontendisti-prvni-konference
+    url: https://frontendisti.cz/konference
+    title: Historicky první česká frontendová konference Frontendisti.cz
+    date: 2021-05-29
