data: prepare source files format

--- a/data/sources/datasentics.yaml
+++ b/data/sources/datasentics.yaml
@@ -1,1 +1,3 @@
-https://www.linkedin.com/company/datasentics/events/
+series:
+  linkedin:
+    url: https://www.linkedin.com/company/datasentics/events/
