--- a/data/sources/gdg-prague.yaml
+++ b/data/sources/gdg-prague.yaml
@@ -1,13 +1,14 @@
-https://www.meetup.com/GDGPrague
-GDG Prague
+series:
+  meetupcom:
+    url: https://www.meetup.com/GDGPrague
 
 
-https://www.meetup.com/GDGPrague/events/drxpmsyccmbrb/
-Monday, September 13, 2021
-GDG Garage Prague One
+# https://www.meetup.com/GDGPrague/events/drxpmsyccmbrb/
+# Monday, September 13, 2021
+# GDG Garage Prague One
 
-https://www.meetup.com/GDGPrague/events/drxpmsyccmbkc/
-Monday, September 27, 2021
-GDG Garage Prague One
+# https://www.meetup.com/GDGPrague/events/drxpmsyccmbkc/
+# Monday, September 27, 2021
+# GDG Garage Prague One
 
 
