--- a/data/sources/impact-hub-praha.yaml
+++ b/data/sources/impact-hub-praha.yaml
@@ -1,2 +1,4 @@
-https://www.linkedin.com/company/impact-hub-praha/events/
+series:
+  linkedin:
+    url: https://www.linkedin.com/company/impact-hub-praha/events/
 
