--- a/data/sources/pipedrive-prague.yaml
+++ b/data/sources/pipedrive-prague.yaml
@@ -1,4 +1,6 @@
-https://www.meetup.com/pipedrive-talks-prague/events/280151778/
+series:
+  meetupcom:
+    url: https://www.meetup.com/pipedrive-talks-prague/events/280151778/
 
-
-https://www.meetup.com/pipedrive-talks-prague/events/280460361/
+# https://www.meetup.com/pipedrive-talks-prague/events/280151778/
+# https://www.meetup.com/pipedrive-talks-prague/events/280460361/
