--- a/data/sources/asociace-ux.yaml
+++ b/data/sources/asociace-ux.yaml
@@ -1,1 +1,5 @@
-https://www.meetup.com/asociace-ux/events/280440185/
+series:
+  url: http://www.asociaceux.cz/
+  meetupcom:
+    url: https://www.meetup.com/asociace-ux/
+  events: []
