--- a/data/sources/prague-ai.yaml
+++ b/data/sources/prague-ai.yaml
@@ -1,8 +1,7 @@
-Prague Artificial Intelligence & Deep Learning
-https://www.meetup.com/Prague-Artificial-Intelligence-Deep-Learning/
+series:
+  title: Prague Artificial Intelligence & Deep Learning
+  meetupcom:
+    url: https://www.meetup.com/Prague-Artificial-Intelligence-Deep-Learning/
 
 
-https://www.meetup.com/Prague-Artificial-Intelligence-Deep-Learning/events/280505740/
-
-
-
+# https://www.meetup.com/Prague-Artificial-Intelligence-Deep-Learning/events/280505740/
