--- a/data/sources/pydata-prague.yaml
+++ b/data/sources/pydata-prague.yaml
@@ -1,1 +1,4 @@
-https://www.meetup.com/PyData-Prague/events/279339785/
+series:
+  meetupcom:
+    url: https://www.meetup.com/PyData-Prague/events/279339785/
+# https://www.meetup.com/PyData-Prague/events/279339785/
