--- a/data/sources/prague-ai.yaml
+++ b/data/sources/prague-ai.yaml
@@ -2,6 +2,9 @@ series:
   title: Prague Artificial Intelligence & Deep Learning
   meetupcom:
     url: https://www.meetup.com/Prague-Artificial-Intelligence-Deep-Learning/
-
-
-# https://www.meetup.com/Prague-Artificial-Intelligence-Deep-Learning/events/280505740/
+    description: "We\u2019re excited to bring you the latest happenings in AI, Machine\
+      \ Learning, Deep Learning, Data Science and Big Data.Who are we? We\u2019re\
+      \ H2O.ai ( https://www.h2o.ai/ ), creators of the world\u2019s leading ope"
+    title: Prague Artificial Intelligence & Deep Learning (Prague, Czech Republic)
+    image: https://secure.meetupstatic.com/photos/event/1/6/c/e/600_485045838.jpeg
+  events: []
