--- a/data/sources/prague-data-punkers.yaml
+++ b/data/sources/prague-data-punkers.yaml
@@ -1,3 +1,8 @@
 series:
   meetupcom:
     url: https://www.meetup.com/data-punkers/events/past/
+    description: Past Events for Prague Data Punkers in Prague, Czech Republic. A
+      Meetup group with over 418 Data Punkers.
+    title: Past Events | Prague Data Punkers (Prague, Czech Republic)
+    image: https://secure.meetupstatic.com/photos/event/3/a/3/0/600_487934896.jpeg
+  events: []
