--- a/data/sources/prague-devops.yaml
+++ b/data/sources/prague-devops.yaml
@@ -1,8 +1,9 @@
 series:
   meetupcom:
     url: https://www.meetup.com/Prague-DevOps-Meetup/
-
-# https://www.meetup.com/Prague-DevOps-Meetup/events/280234441/
-
-
-
+    description: 'DevOps is the next level of Agile. While Agile connects Business
+      and Development to speed up the process. DevOps is connecting Development with
+      delivery to production and maintenance (IT Operations). '
+    title: Prague DevOps Meetup (Prague, Czech Republic)
+    image: https://secure.meetupstatic.com/photos/event/6/e/7/4/600_474748276.jpeg
+  events: []
