--- a/data/sources/praguejs.yaml
+++ b/data/sources/praguejs.yaml
@@ -1,3 +1,8 @@
 series:
   meetupcom:
     url: https://www.meetup.com/praguejs/events/
+    description: Upcoming events for PragueJS in Prague, Czech Republic. A Meetup
+      group with over 1817 Members.
+    title: Upcoming events | PragueJS (Prague, Czech Republic)
+    image: https://secure.meetupstatic.com/photos/event/e/8/f/c/600_455639644.jpeg
+  events: []
