data: modify YAML formatting

--- a/data/sources/asociace-ux.yaml
+++ b/data/sources/asociace-ux.yaml
@@ -2,10 +2,9 @@ series:
   url: http://www.asociaceux.cz/
   meetupcom:
     url: https://www.meetup.com/asociace-ux/
-    description: "Monthly delicacies for designer brains. We are going nonstop since\
-      \ June 2013. Organized by UX Association and sometimes in English.Ka\u017Ed\xFD\
-      \ m\u011Bs\xEDc nov\xE9 pochoutky pro designersk\xE9 moze\u010Dky. Jedeme nonstop\
-      \ od"
+    description: Monthly delicacies for designer brains. We are going nonstop since
+      June 2013. Organized by UX Association and sometimes in English.Každý měsíc
+      nové pochoutky pro designerské mozečky. Jedeme nonstop od
     title: Asociace UX (Prague, Czech Republic)
     image: https://secure.meetupstatic.com/photos/event/8/6/2/b/600_462814347.jpeg
   events: []
