--- a/data/sources/vuejs-cz-sk.yaml
+++ b/data/sources/vuejs-cz-sk.yaml
@@ -1,10 +1,9 @@
 series:
   meetupcom:
     url: https://www.meetup.com/vuejs-cz-sk/
-    description: "P\u0159ij\u010Fte se sezn\xE1mit a pokl\xE1bosit si o progresivn\xED\
-      m JS frameworku Vue.js a v\xFDvoji webov\xFDch str\xE1nek a aplikac\xED.Chyst\xE1\
-      me setk\xE1n\xED v Praze a Brn\u011B s prezentacemi, novinkami z komunity i\
-      \ uk\xE1zkami p\u0159\xEDpadov\xFDch"
+    description: Přijďte se seznámit a poklábosit si o progresivním JS frameworku
+      Vue.js a vývoji webových stránek a aplikací.Chystáme setkání v Praze a Brně
+      s prezentacemi, novinkami z komunity i ukázkami případových
     title: Vue.js CZ/SK (Prague, Czech Republic)
     image: https://secure.meetupstatic.com/photos/event/b/1/e/7/600_469905543.jpeg
   events: []
